# HandPoseEstimation

./: .gitignore  Block.h  CMakeLists.txt  CalSim.h  LoadData.cpp  LoadData.h  Makefile  Node.cpp  Node.h  OutputDataresultDebug.csv  OutputDataresultRawDebug.csv  OutputDataresultRawReal.csv  OutputDataresultReal.csv  README.md  RandomForest.cpp  RandomForest.h  Tree.cpp  Tree.h  calSim.cpp  cnn.py  common.h  knn.cpp  main.cpp  makefile
ExampleInput/: rand.py  train.csv  trainExample.csv  trainExample1.csv
Report/: nips.tex
script/: cropping.cpp
